--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="btn-item" data-url="policeSentimentList">
 			<span>Demo</span>
 			<ul class="child">
-				<li data-url="demo">表格</li>
+				<li data-url="demo">表格案例</li>
 				<li data-url="drunkDriving">echarts</li>
 			</ul>
 		</div>
